Fix Bug : align columns at left

--- a/public/app/styles/loged.css
+++ b/public/app/styles/loged.css
@@ -153,6 +153,7 @@ input[type=button] {
 /**************    Colonnes ****************/
 #content {
 	display: inline-block;
+	width: 100%;
 }
 
 .column {
